# dtwee

./: .gitignore  README.md  m  manage.py  pyproject.toml
dtwee/: asgi.py  settings.py  urls.py  wsgi.py
dtwee_app/: apps.py  form.py  models.py  render.py  services.py  validators.py  views.py
dtwee_app/migrations/: 0001_initial.py  0002_alter_tweet_like_count_alter_tweet_reply_count_and_more.py  0003_tweet_created_at.py  0004_useraction.py  0005_alter_useraction_tweet_alter_useraction_user_and_more.py  0006_alter_tweeuser_user.py
dtwee_app/templates/: base.html  home.html  profile.html  register.html
