[tool.poetry]
name = "dtwee"
version = "0.1.0"
description = ""
authors = ["Danylo Kovalenko <danil130999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.7"
Jinja2 = "^3.1.2"
faker = "^18.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
